--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=library
+
+#Configuração do Redis
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+
+#Configuração do MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
+spring.datasource.username=library_user
+spring.datasource.password=080808A
+spring.jpa.hibernate.ddl-auto=update
