:sparkles: feat - aluno emprestimos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
 spring.datasource.username=library_user
 spring.datasource.password=080808A
 spring.jpa.hibernate.ddl-auto=update
+
+#Configuração do JWT
+jwt.secret=a2a8a2d3-b3f0-4c1b-9e7c-1f1a2b3c4d5e
+jwt.expiration=86400000
