:sparkles: feat - adicionando endpoint upload e logica para armazenamento temporario de arquivo

--- a/compose.yaml
+++ b/compose.yaml
@@ -6,14 +6,24 @@ services:
       - 'MYSQL_USER=library-user'
       - 'MYSQL_PASSWORD=080808A'
       - 'MYSQL_ROOT_PASSWORD=40028922'
-    ports: 
+    ports:
       - '3306:3306'
     volumes:
-        - 'mysql-data:/var/lib/mysql'
+      - mysql-data:/var/lib/mysql
+
   redis:
     image: 'redis:alpine'
     ports:
       - '6379:6379'
 
+  rabbitmq:
+    image: 'rabbitmq:3-management'
+    ports:
+      - '5672:5672'
+      - '15672:15672'
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
+
 volumes:
     mysql-data:
+    rabbitmq-data:
