--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,12 @@ spring.jpa.hibernate.ddl-auto=update
 #Configuração do JWT
 jwt.secret=a2a8a2d3-b3f0-4c1b-9e7c-1f1a2b3c4d5e
 jwt.expiration=86400000
+
+# Configuração do RabbitMQ
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Configuração do Upload
+file.upload-dir=./uploads_temp
