:cofig: config - permitindo requisição do proxy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 
 #Configuração do MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
+spring.datasource.url=jdbc:mysql://mysql:3306/biblioteca
 spring.datasource.username=library_user
 spring.datasource.password=080808A
 spring.jpa.hibernate.ddl-auto=update
