--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,4 @@ jobs:
           java-version: '21'
 
       - name: Build with Maven
-        run: mvn -B package -DskipTests
+        run: mvn -B package
