--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,5 +1,28 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.application.name=library
+
+#Configuração do Redis
+spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
+spring.data.redis.port=6379
+
+#Configuração do MySQL
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/biblioteca}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:library-user}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:080808A}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#Configuração do JWT
+jwt.secret=a2a8a2d3-b3f0-4c1b-9e7c-1f1a2b3c4d5e
+jwt.expiration=86400000
+
+# Configuração do RabbitMQ
+spring.rabbitmq.host=${SPRING_RABBITMQ_HOST:localhost}
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Configuração do Upload
+file.upload-dir=./uploads_temp
+
+# Allow bean definition overriding to fix conflict between Spring Data REST and Spring Data Web
+spring.main.allow-bean-definition-overriding=true
