Restaura alterações do stash + configurações de CI e ajustes de segurança

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=library
 
 #Configuração do Redis
-spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
+spring.data.redis.host=${SPRING_REDIS_HOST:10.0.0.242}
 spring.data.redis.port=6379
 
 #Configuração do MySQL
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/biblioteca}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://10.0.0.242:3306/biblioteca}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:library-user}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:080808A}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:12345Lottus}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
@@ -22,7 +22,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 # Configuração do Upload
-file.upload-dir=./uploads_temp
+file.upload-dir=/home/ubuntu/uploads_temp
 
 # Allow bean definition overriding to fix conflict between Spring Data REST and Spring Data Web
 spring.main.allow-bean-definition-overriding=true
